--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <button onclick="onclickEvent(3)">Check</button>
     <p id="txtResult"></p>
     <script>
-        function GetBrowserName() {
-            const { userAgent } = navigator;
-            let result = {};
-            const opera = ' OPR/';
-            var isOpera = !!window.opr || !!window.opera || userAgent.indexOf(opera) >= 0;
-            if (isOpera) {
-                let index = userAgent.substr(userAgent.indexOf(opera) + opera.length);
-                index
-                return "Opera"
-            };
-
+        function GetOrientationString(orientation) {
+            switch (orientation) {
+                case 0:
+                    return "Landscape";
+                case 1:
+                    return "Portrait";
+                case 2:
+                    return "Square";
+                default:
+                    return "🚫";
+            }
         }
 
-        function onclickEvent(btn) {
+        async function onclickEvent(btn) {
             const id = document.getElementById("txtResult");
             try {
                 switch (btn) {
@@ -55,48 +55,78 @@
                         //Reference: https://amiunique.org/fp
                         //https://webglreport.com/
                         //https://panopticlick.eff.org/
-                        var myDate = new Date();
-                        id.innerHTML += "<b>Browser : </b>" + (Main.Module.BrowserGetName(null) || "🚫") + "<br /><br />";
-                        id.innerHTML += "<b>Browser : </b>" + (Main.Module.BrowserGetName("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.121 Safari/537.36 OPR/71.0.3770.228") || "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenHeight:</b> " + (window.screen.height ?? "🚫") + "<br />";//(Main.Module != undefined)
-                        id.innerHTML += "<b>ScreenWidth:</b> " + (window.screen.width ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenTotalPixels:</b> " + ((window.screen.height * window.screen.width) ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenAvailableHeight:</b> " + (window.screen.availHeight ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenAvailableWidth:</b> " + (window.screen.availWidth ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenTotalAvailablePixels:</b> " + ((window.screen.availHeight * window.screen.availWidth) ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>ScreenColorDepth:</b> " + (window.screen.colorDepth ?? "🚫") + "<br />";
 
-                        id.innerHTML += "<b>DateTimezoneOffset:</b> " + (-myDate.getTimezoneOffset()) + "<br />";
-                        id.innerHTML += "<b>NavigatorUserAgent:</b> " + window.navigator.userAgent + "<br />";
-                        id.innerHTML += "<b>NavigatorVendor:</b> " + (navigator.vendor ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorPlatform:</b> " + (navigator.platform ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorLanguage:</b> " + (navigator.language ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorDoNotTrack:</b> " + (!!navigator.doNotTrack ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorCookieEnabled:</b> " + (navigator.cookieEnabled ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorJavaEnabled:</b> " + (navigator.javaEnabled() ?? "🚫") + "<br />";
-                        //id.innerHTML += "<b>NavigatorLanguages:</b> " + (Main.Module.GetWebGLRenderer() ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorMaxTouchPoints:</b> " + (navigator.maxTouchPoints ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorDeviceMemory:</b> " + (navigator.deviceMemory ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorHardwareConcurrency:</b> " + (navigator.hardwareConcurrency ?? "🚫") + "<br />";
-                        id.innerHTML += "<b>NavigatorMimeTypes:</b> " + (navigator.mimeTypes.length ?? "🚫") + "<br />";
-                        id.innerHTML += "<ul>";
-                        for (let i = 0; i < navigator.mimeTypes.length; i++) {
-                            id.innerHTML += "<li><b>Type</b>: " + (navigator.mimeTypes.item(i).type ?? "🚫") + "; <b>Description:</b> " + (navigator.mimeTypes.item(i).description ?? "🚫") + "; <b>Suffixes:</b> " + ((navigator.mimeTypes.item(i).suffixes ?? "🚫")||"🚫") + "</li>";
+                        var innerHTML = "";
+                        var myDate = new Date();
+                        innerHTML += "<br /><b>Browser : </b>" + (await Main.Module.BrowserGetNameAsync(null) || "🚫") + "<br />";
+                        innerHTML += "<b>UserAgent:</b> " + Main.Module.BrowserGetUserAgent() + "<br />";
+                        innerHTML += "<b>Operating System : </b>" + (Main.Module.BrowserGetOS(null) || "🚫") + "<br /><br />";
+                        innerHTML += "<b>ScreenHeight:</b> " + (Main.Module.BrowserGetScreenHeight() ?? "🚫") + "<br />";
+                        innerHTML += "<b>ScreenWidth:</b> " + (Main.Module.BrowserGetScreenWidth() ?? "🚫") + "<br />";
+                        innerHTML += "<b>ScreenSize:</b> " + (Main.Module.BrowserGetScreenSize() ?? "🚫") + "<br />";
+                        innerHTML += "<b>Screen Orientation:</b> " + GetOrientationString(Main.Module.BrowserGetScreenOrientation()) + "<br /><br />";
+
+                        innerHTML += "<b>AvailableScreenHeight:</b> " + (Main.Module.BrowserGetAvailableScreenHeight() ?? "🚫") + "<br />";
+                        innerHTML += "<b>AvailableScreenWidth:</b> " + (Main.Module.BrowserGetAvailableScreenWidth() ?? "🚫") + "<br />";
+                        innerHTML += "<b>AvailableScreenSize:</b> " + (Main.Module.BrowserGetAvailableScreenSize() ?? "🚫") + "<br />";
+                        innerHTML += "<b>AvailableScreenOrientation:</b> " + GetOrientationString(Main.Module.BrowserGetAvailableScreenOrientation()) + "<br /><br />";
+
+                        innerHTML += "<b>ViewportHeight:</b> " + (Main.Module.BrowserGetViewportHeight() ?? "🚫") + "<br />";
+                        innerHTML += "<b>ViewportWidth:</b> " + (Main.Module.BrowserGetViewportWidth() ?? "🚫") + "<br />";
+                        innerHTML += "<b>ViewportSize:</b> " + (Main.Module.BrowserGetViewportSize() ?? "🚫") + "<br />";
+                        innerHTML += "<b>ViewportOrientation:</b> " + GetOrientationString(Main.Module.BrowserGetViewportOrientation()) + "<br /><br />";
+
+                        innerHTML += "<b>WebGLRenderer : </b>" + (Main.Module.BrowserGetWebGLRenderer() || "🚫") + "<br />";
+                        innerHTML += "<b>WebGLVendor : </b>" + (Main.Module.BrowserGetWebGLVendor() || "🚫") + "<br /><br />";
+
+                        innerHTML += "<b>MaxTouchPoints:</b> " + (Main.Module.BrowserGetMaxTouchPoints() ?? "🚫") + "<br />";
+                        innerHTML += "<b>DeviceMemory:</b> " + (Main.Module.BrowserGetDeviceMemory() ?? "🚫") + "<br />";
+                        innerHTML += "<b>NavigatorHardwareConcurrency:</b> " + (Main.Module.BrowserGetHardwareConcurrency() ?? "🚫") + "<br /><br />";
+                        innerHTML += "<b>Language:</b> " + (Main.Module.BrowserGetLanguage() ?? "🚫") + "<br />";
+                        innerHTML += "<b>Languages:</b> <br />";
+                        innerHTML += "<ul>";
+                        var langs = Main.Module.BrowserGetLanguages();
+                        for (let i = 0; i < langs.length; i++) {
+                            innerHTML += "<li><b>Language</b>: " + (langs[i] ?? "🚫") + " </li>";
                         }
-                        id.innerHTML += "</ul>";
-                        id.innerHTML += "<b>NavigatorPlugins:</b> " + (navigator.plugins.length || "🚫") + "<br />";
-                        id.innerHTML += "<ul>";
-                        for (let i = 0; i < navigator.plugins.length; i++) {
-                            id.innerHTML += "<li><b>Name</b>: " + (navigator.plugins.item(i).name|| "🚫") + "</li>";
+                        innerHTML += "</ul>";
+
+                        innerHTML += "<b>TimezoneOffset Minutes:</b> " + (Main.Module.BrowserGetTimezoneOffsetMinutes()) + "<br />";
+                        innerHTML += "<b>TimezoneOffset Seconds:</b> " + (Main.Module.BrowserGetTimezoneOffsetSeconds()) + "<br />";
+                        innerHTML += "<b>TimezoneOffset Milliseconds:</b> " + (Main.Module.BrowserGetTimezoneOffsetMilliseconds()) + "<br /><br />";
+
+                        innerHTML += "<b>NavigatorDoNotTrack:</b> " + Main.Module.BrowserGetDoNotTrack() + "<br />";
+                        innerHTML += "<b>Cookies Supported:</b> " + Main.Module.BrowserHasCookiesSupport()  + "<br /><br />";
+
+                        var mimeTypes = Main.Module.BrowserGetMimeTypes();
+                        innerHTML += "<b>NavigatorMimeTypes:</b> " + (mimeTypes.length ?? "🚫") + "<br />";
+                        innerHTML += "<ul>";
+                        for (let i = 0; i < mimeTypes.length; i++) {
+                            innerHTML += "<li>MimeType { <b>Type</b>: " + (mimeTypes[i].Type || "🚫") + " | <b>Description:</b> " + (mimeTypes[i].Description || "🚫") + " | <b>Suffixes:</b> " + (mimeTypes[i].Suffixes || "🚫") + " }</li>";
                         }
-                        id.innerHTML += "</ul>";
+                        innerHTML += "</ul>";
+
+                        var plugins = Main.Module.BrowserGetPlugins();
+                        innerHTML += "<br><b>NavigatorPlugins:</b> " + (plugins.length ?? "🚫") + "<br />";
+                        innerHTML += "<ul>";
+                        for (let i = 0; i < plugins.length; i++) {
+                            innerHTML += "<li>Plugin { <b>Name</b>: " + (plugins[i].Name || "🚫");
+                            innerHTML += "<ul>";
+                            for (let j = 0; j < plugins[i].MimeTypes.length; j++) {
+                                innerHTML += "<li>MimeType{ <b>Type</b>: " + (plugins[i].MimeTypes[j].Type || "🚫") + " | <b>Description:</b> " + (plugins[i].MimeTypes[j].Description || "🚫") + " | <b>Suffixes:</b> " + (plugins[i].MimeTypes[j].Suffixes || "🚫") + " }</li>";
+                            }
+                            innerHTML += "</ul>";
+                            innerHTML += " }</li>";
+                        }
+                        innerHTML += "</ul><br />";
                         let counter = 0;
-                        for (let value in navigator) {
+                        for (var value in Object.getOwnPropertyNames(Navigator.prototype)) {
+                            console.log(value.Name);
                             counter++;
                         }
-                        id.innerHTML += "<b>WebGLRenderer : </b>" + (Main.Module.BrowserGetWebGLRenderer() || "🚫") + "<br />";
-                        id.innerHTML += "<b>WebGLVendor : </b>" + (Main.Module.BrowserGetWebGLVendor() || "🚫") + "<br />";
-                        id.innerHTML += "<b>Navigator TotalProperties: </b>" + (counter ?? "🚫") + "<br />";
+                        innerHTML += "<b>Navigator TotalProperties: </b>" + (counter ?? "🚫") + "<br />";
+                        id.innerHTML = innerHTML;
+                        //console.log(innerHTML);
                         break;
                 }
             } catch (error) {
